diana_driver/DianaApi/include/DianaAPI.h

DIANA_API int servoL_ex(/*IN[6]*/ double *pose, /*IN*/ double time, /*IN*/ double look_ahead_time, /*IN*/ double gain,
                        /*IN*/ double scale, /*IN*/ bool realiable, /*IN*/ double *active_tcp = nullptr);
DIANA_API int speedJ_ex(/*IN[7]*/ double *speed, /*IN*/ double a, /*option*/ double t, /*IN*/ bool realiable);
DIANA_API int speedL_ex(/*IN[6]*/ double *speed, /*IN[2]*/ double *a, /*option*/ double t, /*IN*/ bool realiable,
                        /*IN*/ double *active_tcp = nullptr);
/*************************************** version 0.9 ***************************************/

DIANA_API int dumpToUDisk();
DIANA_API int inverse_ext(/*IN[7]*/ double *ref_joints, /*IN[6]*/ double *pose, /*OUT[7]*/ double *joints,
                          /*IN*/ double *active_tcp = nullptr);
DIANA_API int getJointLinkPos(/*OUT[7]*/ double *joints);
DIANA_API int createComplexPath(/*IN*/ int complex_path_type, /*OUT*/ unsigned int &complex_path_id);
DIANA_API int addMoveLByTarget(/*IN*/ unsigned int complex_path_id, /*IN[7]*/ double *target_joints, /*IN*/ double vel,
                               /*IN*/ double acc, /*IN*/ double blendradius);
DIANA_API int addMoveLByPose(/*IN*/ unsigned int complex_path_id, /*IN[6]*/ double *target_pose, /*IN*/ double vel,
                             /*IN*/ double acc, /*IN*/ double blendradius);
DIANA_API int addMoveJByTarget(/*IN*/ unsigned int complex_path_id, /*IN[7]*/ double *target_joints,
                               /*IN*/ double vel_percent, /*IN*/ double acc_percent, /*IN*/ double blendradius_percent);
DIANA_API int addMoveJByPose(/*IN*/ unsigned int complex_path_id, /*IN[6]*/ double *target_pose,
                             /*IN*/ double vel_percent, /*IN*/ double acc_percent, /*IN*/ double blendradius_percent);
DIANA_API int addMoveCByTarget(/*IN*/ unsigned int complex_path_id, /*IN[7]*/ double *pass_joints,
                               /*IN[7]*/ double *target_joints, /*IN*/ double vel, /*IN*/ double acc,
                               /*IN*/ double blendradius, /*IN*/ bool ignore_rotation);
DIANA_API int addMoveCByPose(/*IN*/ unsigned int complex_path_id, /*IN[6]*/ double *pass_pose,
                             /*IN[6]*/ double *target_pose, /*IN*/ double vel, /*IN*/ double acc,
                             /*IN*/ double blendradius, /*IN*/ bool ignore_rotation);
DIANA_API int runComplexPath(/*IN*/ unsigned int complex_path_id);
DIANA_API int destroyComplexPath(/*IN*/ unsigned int complex_path_id);
DIANA_API int saveEnvironment();
DIANA_API int moveTcpBaseLinearRelative(double *pose, double v, double a);
/*************************************** version 0.10 ***************************************/

DIANA_API int dumpToUDiskEx(/*IN*/ double timeout_second);
DIANA_API int enterForceMode_ex(/*IN[3]*/ double *dblForceDirection, /*[IN]*/ double dblForceValue,
                                /*[IN]*/ double dblMaxApproachVelocity, /*[IN]*/ double dblMaxAllowTcpOffset,
                                /*IN[6]*/ double *dblActiveTcp = nullptr);
DIANA_API int readDI(/*IN*/ const char *groupName, /*IN*/ const char *IOName, /*OUT*/ int &value);
DIANA_API int readAI(/*IN*/ const char *groupName, /*IN*/ const char *IOName, /*OUT*/ int &mode, /*OUT*/ double &value);
DIANA_API int setAIMode(/*IN*/ const char *groupName, /*IN*/ const char *IOName, /*IN*/ int mode);
DIANA_API int writeDO(/*IN*/ const char *groupName, /*IN*/ const char *IOName, /*IN*/ int value);
DIANA_API int writeAO(/*IN*/ const char *groupName, /*IN*/ const char *IOName, /*IN*/ int mode, /*IN*/ double value);
DIANA_API int readBusCurrent(/*OUT*/ double &current);
DIANA_API int readBusVoltage(/*OUT*/ double &voltage);