diana_driver/DianaApi/bin/DianaApi.py


def servoL_ex(tcp_pose, t=0.01, ah_t=0.01, gain=300, scale=1000, realiable=False):
    dianaTcpPose = DIANA_TCP_POSE()
    dianaTcpPose.values = (c_double * 6)()
    for index in range(0, len(dianaTcpPose.values)):
        dianaTcpPose.values[index] = tcp_pose[index]
    active_tcp = c_void_p(0)
    api_mod.servoL_ex.argtypes = [POINTER(
        DIANA_TCP_POSE), c_double, c_double, c_double, c_double, c_void_p, c_bool]
    api_mod.servoL_ex.restype = c_int
    ret = api_mod.servoL_ex(dianaTcpPose, t, ah_t, gain,
                         scale, active_tcp, realiable)
    return message(ret)


def speedJ_ex(speed, acc, t=0.0, realiable=False):
    dianaJointsSpeed = DIANA_JOINTS_SPEED()
    dianaJointsSpeed.values = (c_double * 7)()
    for index in range(0, len(speed)):
        dianaJointsSpeed.values[index] = speed[index]
    api_mod.speedJ_ex.argtypes = [
        POINTER(DIANA_JOINTS_SPEED), c_double, c_double, c_bool]
    api_mod.speedJ_ex.restype = c_int
    ret = api_mod.speedJ_ex(dianaJointsSpeed, acc, t, realiable)
    return message(ret)


def speedL_ex(speed, acc, t=0.0, realiable=False):
    dianaJointsSpeed = DIANA_JOINTS_SPEED_L()
    dianaJointsSpeed.values = (c_double * 6)()
    for index in range(0, len(dianaJointsSpeed.values)):
        dianaJointsSpeed.values[index] = speed[index]
    dianaJointsAcc = DIANA_JOINTS_ACC()
    dianaJointsAcc.values = (c_double * 2)()
    for index in range(0, len(dianaJointsAcc.values)):
        dianaJointsAcc.values[index] = acc[index]
    active_tcp = c_void_p(0)
    api_mod.speedL_ex.argtypes = [POINTER(DIANA_JOINTS_SPEED_L), POINTER(
        DIANA_JOINTS_ACC), c_double, c_void_p, c_bool]
    api_mod.speedL_ex.restype = c_int
    ret = api_mod.speedL_ex(dianaJointsSpeed, dianaJointsAcc,
                         t, active_tcp, realiable)
    return message(ret)

###################### version 0.9#########################

def dumpToUDisk():
    api_mod.dumpToUDisk.restype = c_int
    ret = api_mod.dumpToUDisk()
    return message(ret)

def inverse_ext(ref_joints, pose, joints):
    refJointsPosition = DIANA_JOINTS_POSITION()
    refJointsPosition.values = (c_double * 7)()
    for index in range(0, len(ref_joints)):
        refJointsPosition.values[index] = ref_joints[index]
    dianaTcpPose = DIANA_TCP_POSE()
    dianaTcpPose.values = (c_double * 6)()
    for index in range(0, len(dianaTcpPose.values)):
        dianaTcpPose.values[index] = pose[index]
    dianaJointsPosition = DIANA_JOINTS_POSITION()
    dianaJointsPosition.values = (c_double * 7)()
    active_tcp = c_void_p(0)
    api_mod.inverse_ext.argtypes = [POINTER(DIANA_JOINTS_POSITION), POINTER(DIANA_TCP_POSE), POINTER(
        DIANA_JOINTS_POSITION),  c_void_p]
    api_mod.inverse_ext.restype = c_int
    ret = api_mod.inverse_ext(refJointsPosition, dianaTcpPose,
                           byref(dianaJointsPosition), active_tcp)
    for index in range(0, len(joints)):
        joints[index] = dianaJointsPosition.values[index]
    return message(ret)


def getJointLinkPos(joints):
    dianaJointPos = DIANA_JOINTS_POSITION()
    dianaJointPos.values = (c_double*7)()
    for index in range(0, len(joints)):
        dianaJointPos.values[index] = joints[index]
    api_mod.getJointLinkPos.argtypes = [POINTER(DIANA_JOINTS_POSITION)]
    api_mod.getJointLinkPos.restype = c_int
    ret = api_mod.getJointLinkPos(byref(dianaJointPos))
    for index in range(0, len(joints)):
        joints[index] = dianaJointPos.values[index]
    return message(ret)


def createComplexPath(path_type):
    complex_path_id = c_uint()
    api_mod.createComplexPath.argtypes = [c_int, POINTER(c_uint)]
    api_mod.createComplexPath.restype = c_int
    ret = api_mod.createComplexPath(path_type.value, byref(complex_path_id))
    return ret, complex_path_id


def addMoveLSegmentByTarget(complex_path_id, joints, vel, acc, blendradius):
    dianaJointPos = DIANA_JOINTS_POSITION()
    dianaJointPos.values = (c_double * 7)()
    for index in range(0, len(joints)):
        dianaJointPos.values[index] = joints[index]
    api_mod.addMoveLByTarget.argtypes = [c_uint, POINTER(
        DIANA_JOINTS_POSITION), c_double, c_double, c_double]
    api_mod.addMoveLByTarget.restype = c_int
    ret = api_mod.addMoveLByTarget(
        complex_path_id, dianaJointPos, vel, acc, blendradius)
    return message(ret)


def addMoveLSegmentByPose(complex_path_id, pose, vel, acc, blendradius):
    dianaTcpPose = DIANA_TCP_POSE()
    dianaTcpPose.values = (c_double * 6)()
    for index in range(0, len(dianaTcpPose.values)):
        dianaTcpPose.values[index] = pose[index]
    api_mod.addMoveLByPose.argtypes = [c_uint, POINTER(
        DIANA_TCP_POSE), c_double, c_double, c_double]
    api_mod.addMoveLByPose.restype = c_int
    ret = api_mod.addMoveLByPose(
        complex_path_id, dianaTcpPose, vel, acc, blendradius)
    return message(ret)


def addMoveJSegmentByTarget(complex_path_id, joints, vel_percent, acc_percent, blendradius_percent):
    dianaJointPos = DIANA_JOINTS_POSITION()
    dianaJointPos.values = (c_double * 7)()
    for index in range(0, len(joints)):
        dianaJointPos.values[index] = joints[index]
    api_mod.addMoveJByTarget.argtypes = [c_uint, POINTER(
        DIANA_JOINTS_POSITION), c_double, c_double, c_double]
    api_mod.addMoveJByTarget.restype = c_int
    ret = api_mod.addMoveJByTarget(
        complex_path_id, dianaJointPos, vel_percent, acc_percent, blendradius_percent)
    return message(ret)


def addMoveJSegmentByPose(complex_path_id, pose, vel_percent, acc_percent, blendradius_percent):
    dianaTcpPose = DIANA_TCP_POSE()
    dianaTcpPose.values = (c_double * 6)()
    for index in range(0, len(dianaTcpPose.values)):
        dianaTcpPose.values[index] = pose[index]
    api_mod.addMoveJByPose.argtypes = [c_uint, POINTER(
        DIANA_TCP_POSE), c_double, c_double, c_double]
    api_mod.addMoveJByPose.restype = c_int
    ret = api_mod.addMoveJByPose(
        complex_path_id, dianaTcpPose, vel_percent, acc_percent, blendradius_percent)
    return message(ret)


def addMoveCSegmentByTarget(complex_path_id, pass_joints, target_joints, vel, acc, blendradius, ignore_rotation):
    dianaPassJointPos = DIANA_JOINTS_POSITION()
    dianaPassJointPos.values = (c_double * 7)()
    dianaTargetJointPos = DIANA_JOINTS_POSITION()
    dianaTargetJointPos.values = (c_double * 7)()
    for index in range(0, len(pass_joints)):
        dianaPassJointPos.values[index] = pass_joints[index]
    for index in range(0, len(target_joints)):
        dianaTargetJointPos.values[index] = target_joints[index]
    api_mod.addMoveCByTarget.argtypes = [c_uint, POINTER(DIANA_JOINTS_POSITION), POINTER(
        DIANA_JOINTS_POSITION), c_double, c_double, c_double, c_bool]
    api_mod.addMoveCByTarget.restype = c_int
    ret = api_mod.addMoveCByTarget(complex_path_id, dianaPassJointPos,
                                dianaTargetJointPos, vel, acc, blendradius, ignore_rotation)
    return message(ret)


def addMoveCSegmentByPose(complex_path_id, pass_pose, target_pose, vel, acc, blendradius, ignore_rotation):
    dianaPassTcpPose = DIANA_TCP_POSE()
    dianaPassTcpPose.values = (c_double * 6)()
    dianaTargetTcpPose = DIANA_TCP_POSE()
    dianaTargetTcpPose.values = (c_double * 6)()
    for index in range(0, len(dianaPassTcpPose.values)):
        dianaPassTcpPose.values[index] = pass_pose[index]
    for index in range(0, len(dianaTargetTcpPose.values)):
        dianaTargetTcpPose.values[index] = target_pose[index]
    api_mod.addMoveCByPose.argtypes = [c_uint, POINTER(DIANA_TCP_POSE), POINTER(
        DIANA_TCP_POSE), c_double, c_double, c_double, c_bool]
    api_mod.addMoveCByPose.restype = c_int
    ret = api_mod.addMoveCByPose(complex_path_id, dianaPassTcpPose,
                              dianaTargetTcpPose, vel, acc, blendradius, ignore_rotation)
    return message(ret)


def runComplexPath(complex_path_id):
    api_mod.runComplexPath.argtypes = [c_uint]
    api_mod.runComplexPath.restype = c_int
    ret = api_mod.runComplexPath(complex_path_id)
    return message(ret)


def destroyComplexPath(complex_path_id):
    api_mod.destroyComplexPath.argtypes = [c_uint]
    api_mod.destroyComplexPath.restype = c_int
    ret = api_mod.destroyComplexPath(complex_path_id)
    return message(ret)


def saveEnvironment():
    api_mod.saveEnvironment.restype = c_int
    ret = api_mod.saveEnvironment()
    return message(ret)


def moveTcpBaseLinearRelative(pose, v, a):
    dianaTcpPose = DIANA_TCP_POSE()
    dianaTcpPose.values = (c_double * 6)()
    for index in range(0, len(dianaTcpPose.values)):
        dianaTcpPose.values[index] = pose[index]
    api_mod.moveTcpBaseLinearRelative.argtypes = [POINTER(
        DIANA_TCP_POSE), c_double, c_double]
    api_mod.moveTcpBaseLinearRelative.restype = c_int
    ret = api_mod.moveTcpBaseLinearRelative(dianaTcpPose, v, a)
    return message(ret)

###################### version 0.10#########################

def dumpToUDiskEx(timeout_second):
    api_mod.dumpToUDiskEx.restype = c_int
    api_mod.dumpToUDiskEx.argtypes = [c_double]
    ret = api_mod.dumpToUDiskEx(timeout_second)
    return message(ret)

def enterForceMode_ex(forceDirection,forceValue,maxApproachVelocity,maxAllowTcpOffset,active_tcp):
    arr_ForceDirection = DIANA_FORCE_DIRECTION()
    arr_ForceDirection.values = (c_double*3)()
    for index in range(0, len(arr_ForceDirection.values)):
        arr_ForceDirection.values[index] = forceDirection[index]
    arr_Active_Tcp = DIANA_ACTIVE_TCP()
    arr_Active_Tcp.values = (c_double*6)()
    for index in range(0, len(arr_Active_Tcp.values)):
        arr_Active_Tcp.values[index] = active_tcp[index]
    api_mod.enterForceMode_ex.restype = c_int
    api_mod.enterForceMode_ex.argtypes = [POINTER(DIANA_FORCE_DIRECTION),c_double,c_double,c_double,POINTER(DIANA_ACTIVE_TCP)]
    ret = api_mod.enterForceMode_ex(byref(arr_ForceDirection),forceValue,maxApproachVelocity,maxAllowTcpOffset,byref(arr_Active_Tcp))
    return message(ret)

def readDI(group_name, di_name):
    DIValue = c_int()
    api_mod.readDI.argtypes = [c_char_p, c_char_p, POINTER(c_int)]
    api_mod.readDI.restype = c_int
    ret = api_mod.readDI(bytes(group_name, encoding = "utf-8"), bytes(di_name, encoding = "utf-8"), byref(DIValue))
    return ret, DIValue

def readAI(group_name, di_name):
    AIValue = c_double()
    AIMode = c_int()
    api_mod.readAI.argtypes = [c_char_p, c_char_p, POINTER(c_int),POINTER(c_double)]
    api_mod.readAI.restype = c_int
    ret = api_mod.readAI(bytes(group_name, encoding = "utf-8"), bytes(di_name, encoding = "utf-8"), byref(AIMode),byref(AIValue))
    return ret, AIMode, AIValue

def setAIMode(group_name, di_name,mode):
    api_mod.setAIMode.argtypes = [c_char_p, c_char_p, c_int]
    api_mod.setAIMode.restype = c_int
    ret = api_mod.setAIMode(bytes(group_name, encoding = "utf-8"), bytes(di_name, encoding = "utf-8"),mode)
    return message(ret)

def writeDO(group_name, di_name,mode,value):
    api_mod.writeDO.argtypes = [c_char_p, c_char_p, c_int]
    api_mod.writeDO.restype = c_int
    ret = api_mod.writeDO(bytes(group_name, encoding = "utf-8"), bytes(di_name, encoding = "utf-8"),value)
    return message(ret)

def writeAO(group_name, di_name,mode,value):
    api_mod.writeAO.argtypes = [c_char_p, c_char_p, c_int, c_double]
    api_mod.writeAO.restype = c_int
    ret = api_mod.writeAO(bytes(group_name, encoding = "utf-8"), bytes(di_name, encoding = "utf-8"),mode,value)
    return message(ret)

def readBusCurrent():
    Current = c_double()
    api_mod.readBusCurrent.argtypes = [POINTER(c_double)]
    api_mod.readBusCurrent.restype = c_int
    ret = api_mod.readBusCurrent(byref(Current))
    return ret, Current

def readBusVoltage():
    Voltage = c_double()
    api_mod.readBusVoltage.argtypes = [POINTER(c_double)]
    api_mod.readBusVoltage.restype = c_int
    ret = api_mod.readBusVoltage(byref(Voltage))
    return ret, Voltage

###################### version 1.10#########################
